fixed menubar alignment

--- a/style/main.css
+++ b/style/main.css
@@ -6,20 +6,23 @@
 
 .mainHeader {
     text-align: center;
+    background-color: azure;
 }
 
 /* Menubar style along with sub elements */
 .menuBar {
     text-align: justify;
-    min-width: 500px;
+    width: 99.6vw;
+    margin: 0 auto;
 
 }
 .menuBar div {
     float: left;
     text-align: center;
-    width: 33.19%;
+    width: 33vw;
 
     margin: 0px;
+
 }
 
 .menuItem {
@@ -27,8 +30,8 @@
 
     background-color: azure;
 
-    border-style: double;
-    border-width: 0px 1px 0px 1px;
+    border-style: solid;
+    border-width: .1vw .1vw .1vw .1vw;
 }
 
 .dropDownItems {
@@ -36,6 +39,9 @@
     display: none;
 
     background-color: aliceblue;
+
+    border-style: solid;
+    border-width: .1vw .1vw .1vw .1vw;
 }
 
 .dropDownItem {
